src/components/bootstrap-override.scss
.modal.in, .modal.fade, .modal {
  .modal-dialog {
    top: 50%;
    transform: translateY(-50%);
    margin-top: 0;

    .modal-content {
      @include rounded-equal(3px);
      background-color: color('background', 'dark');

      h4 {
        text-align: center;
      }

      .modal-header {
        background-color: color('accent');
        text-align: center;
        color: color('text', 'light');
        @include rounded-indiv(2px, 2px, 0, 0);

        .fa {
          font-size: 5em;
        }

        .close {
          position: absolute;
          top: 10px;
          right: 10px;
          font-size: 2.2em;
          margin: 0;
          @include transition(0.2s ease);
        }
      }

      .modal-footer {
        @include rounded-indiv(0, 0, 2px, 2px);
      }
    }
  }
}

.form-control {
  @include rounded-equal(2px);
}

.btn {
  color: color('text');
  @include rounded-equal(2px);
  @include box-shadow();
  transition: .2s ease;

  &.btn-default {
    background-color: color('primary', 'light');
    border: color('primary', 'base');

    &:hover {
      background-color: color('primary', 'dark');
      border: color('primary', 'light');
    }
  }

  &.btn-primary {
    background-color: color('accent', 'base');
    border: color('accent', 'dark');

    &:hover {
      background-color: color('accent', 'dark');
      border: color('accent', 'light');
    }
  }

  &.btn-success {
    background-color: color('primary', 'base');
    border: color('primary', 'dark');

    &:hover {
      background-color: color('primary', 'light');
      border: color('primary', 'dark');
    }
  }

  &.btn-info {
    background-color: color('primary', 'dark');
    border: color('primary', 'light');

    &:hover {
      background-color: color('primary', 'light');
      border: color('primary', 'dark');
    }
  }

  &.btn-warning {
    background-color: color('secondary', 'light');
    border: color('secondary', 'dark');

    &:hover {
      background-color: color('secondary', 'base');
      border: color('secondary', 'light');
    }
  }

  &.btn-danger {
    background-color: color('secondary', 'dark');
    border: color('secondary', 'light');
    color: color('text', 'light');

    &:hover {
      background-color: color('secondary', 'light');
      border: color('secondary', 'dark');
    }
  }

  &.btn-link {
    color: color('text', 'light');
  }
}

// Radio buttons
// Source: https://codepen.io/AngelaVelasquez/pen/Eypnq
.form-group {
  overflow: hidden;

  ul li{
    color: #AAAAAA;
    display: block;
    position: relative;
    display: inline-block;
    margin-right: 30px;
  }

  ul li input[type=radio]{
    position: absolute;
    visibility: hidden;
  }

  ul li label{
    display: block;
    position: relative;
    font-weight: 300;
    font-size: 1.35em;
    margin: 0 auto;
    height: 30px;
    z-index: 9;
    float: left;
    cursor: pointer;
    padding-left: 38px;
    -webkit-transition: all 0.25s linear;
  }

  ul li:hover label{
    color: #FFFFFF;
  }

  ul li .check{
    display: block;
    position: relative;
    border: 4px solid #AAAAAA;
    border-radius: 100%;
    height: 25px;
    width: 25px;
    z-index: 5;
    transition: border .25s linear;
    -webkit-transition: border .25s linear;
  }

  ul li:hover .check {
    border: 4px solid #FFFFFF;
  }

  ul li .check::before {
    display: block;
    position: absolute;
    content: '';
    border-radius: 100%;
    height: 13px;
    width: 13px;
    top: 2px;
    left: 2px;
    margin: auto;
    transition: background 0.25s linear;
    -webkit-transition: background 0.25s linear;
  }

  input[type=radio]:checked ~ .check {
    border: 4px solid #000;
  }

  input[type=radio]:checked ~ .check::before{
    background: #000;
  }

  input[type=radio]:checked ~ label{
    color: #000;
  }
}

*, not(input) {
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

// Media queries
@media (min-width: 768px){
  .container {
    width: 90%;
  }
}

